@@ -1,14 +1,16 @@
 package com.thaitour.thaitourapi.application.finder;
 
+import com.thaitour.thaitourapi.application.builder.TripDetailBuilder;
+import com.thaitour.thaitourapi.application.builder.TripListBuilder;
 import com.thaitour.thaitourapi.application.mapper.RawTripMapper;
 import com.thaitour.thaitourapi.domain.dao.ParameterDao;
-import com.thaitour.thaitourapi.domain.dto.catalog.article.ArticleFinderPayload;
-import com.thaitour.thaitourapi.domain.dto.catalog.article.ArticleRow;
-import com.thaitour.thaitourapi.domain.dto.catalog.trip.TripParameter;
+import com.thaitour.thaitourapi.domain.dto.catalog.golf.GolfFinderPayload;
+import com.thaitour.thaitourapi.domain.dto.catalog.trip.TripDetail;
+import com.thaitour.thaitourapi.domain.dto.catalog.trip.TripFinderPayload;
 import com.thaitour.thaitourapi.domain.dto.catalog.trip.TripRow;
-import com.thaitour.thaitourapi.domain.dto.dao.catalog.RawArticle;
-import com.thaitour.thaitourapi.domain.dto.dao.catalog.RawTripParameter;
+import com.thaitour.thaitourapi.domain.entity.Trip;
 import com.thaitour.thaitourapi.domain.exception.ThaiTourException;
+import com.thaitour.thaitourapi.domain.repository.TripParameterRepository;
 import com.thaitour.thaitourapi.domain.repository.TripRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,7 +19,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,22 +28,36 @@ import java.util.List;
 public class TripFinder {
 
     private final RawTripMapper rawTripMapper;
-    private final ParameterDao parameterDao;
     private final TripRepository tripRepository;
-    @Transactional(readOnly = true)
-    public Page<TripRow> findTrips(
-            Pageable pageable
-    ) throws ThaiTourException {
-      return tripRepository.findAll(pageable).map(rawTripMapper::toTripRow);
-    }
+    private final TripListBuilder tripListBuilder;
+    private final TripParameterRepository tripParameterRepository;
+
 
     @Transactional(readOnly = true)
-    public List<TripParameter> findTripParams(
-    ) throws ThaiTourException {
-        List<RawTripParameter> entries = parameterDao.findAllParameterForTrips();
+    public List<TripDetail> findFilterTrips(TripFinderPayload payload) {
+        List<UUID> tripIds = new ArrayList<>();
+        List<TripDetail> trips = new ArrayList<TripDetail>();
 
-        return entries.stream()
-                .map(rawTripMapper::toTripParameter)
-                .toList();
+        if (payload.getParameterValuesList() != null && !payload.getParameterValuesList().isEmpty()) {
+            for (int i = 0; i < payload.getParameterValuesList().size(); i++) {
+                List<UUID> list = tripParameterRepository.findTripsIds(payload.getParameterValuesList().get(i));
+                if (list != null) {
+                    tripIds.addAll(list);
+                }
+            }
+        } else {
+            tripIds = tripRepository.findAll().stream().map(Trip::getId).collect(Collectors.toList());
+        }
+
+        Set<UUID> set = new HashSet<>(tripIds);
+        tripIds.clear();
+        tripIds.addAll(set);
+
+        for (UUID golfId : tripIds) {
+            tripListBuilder.build(golfId);
+            trips.add(tripListBuilder.build(golfId));
+        }
+
+        return trips;
     }
 }
